@@ -1,3 +1,7 @@
+2006-05-10 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/inlcude/mcs51/msc1210.h: new, added, thanks Philippe Latu
+
 2006-05-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* device/lib/mcs51/Makefile.in: changed string comparison operator
